added /trend and sending date via post

--- a/home.html
+++ b/home.html
@@ -3,8 +3,9 @@
 	<title></title>
 </head>
 <body>
-<form action="trend">
-	<input type="submit" value="submit">
+<form action="trend" method = "POST">
+     Date: <input type="date" name="date">
+	<input type="submit" value="View trend">
 </form>
 </body>
 </html>
