Made the app much better.
The app now returns the tweet cloud words.

--- a/home.html
+++ b/home.html
@@ -1,11 +1,17 @@
 <html>
 <head>
 	<title></title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<form action="trend" method = "POST">
-     Date: <input type="date" name="date">
-	<input type="submit" value="View trend">
-</form>
+
+<div id="front">
+  <h1> Find the most common Twitter Words on any day! </h1>
+
+  <form action="trend" method = "POST" id="form">
+    <p>Date: <input type="date" name="date"> </p>
+	  <input type="submit" value="View trend">
+  </form>
+</div>
 </body>
 </html>
